--- a/resources.qrc
+++ b/resources.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>qml/main.qml</file>
-        <file>qml/FormularioPanaderia.qml</file>
+        <file>qml/Formulario.qml</file>
         <file>qml/DialogConfig.qml</file>
         <file>qml/assets/icono.png</file>
     </qresource>
